# Zephyr_Template

./: .clang-format  .clangd  .gitignore  README.md
app/: CMakeLists.txt  Kconfig  VERSION  prj.conf
app/src/: main.c
manifest/: west.yml
manifest/zephyr/: module.yml
